[gd_scene load_steps=10 format=3 uid="uid://55o2ddpjh5ds"]

[ext_resource type="Script" uid="uid://lv7n6cdct43x" path="res://Scenes/Game/game.gd" id="1_i1e5p"]
[ext_resource type="PackedScene" uid="uid://cfdil1vt2522f" path="res://Scenes/HUD/hud.tscn" id="2_i1e5p"]
[ext_resource type="PackedScene" uid="uid://c5b1rrrdeysj3" path="res://Scenes/EquationBoard/equation_board.tscn" id="3_flgk0"]
[ext_resource type="PackedScene" uid="uid://bya2bspfpyt0c" path="res://Scenes/BlueyAnswer/bluey_answer.tscn" id="4_vifcx"]
[ext_resource type="AudioStream" uid="uid://7cc2l76edtum" path="res://Assets/Sounds/wrong.wav" id="5_ciybh"]
[ext_resource type="PackedScene" uid="uid://cambpmv5v3opa" path="res://Scenes/EnhancedButton/enhanced_button.tscn" id="5_xfil1"]
[ext_resource type="PackedScene" uid="uid://csme42t8hpnid" path="res://Scenes/PauseScreen/pause_screen.tscn" id="6_flgk0"]
[ext_resource type="AudioStream" uid="uid://c42nkfhvunfly" path="res://Assets/Sounds/correct.wav" id="6_vifcx"]
[ext_resource type="AudioStream" uid="uid://dbv00fxfs8fif" path="res://Assets/Sounds/new_high_score.wav" id="9_huoen"]

[node name="Game" type="Node"]
script = ExtResource("1_i1e5p")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="GameEndWaitTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("2_i1e5p")]

[node name="EquationBoard" parent="." instance=ExtResource("3_flgk0")]
visible = false
position = Vector2(288, 192)

[node name="GameOverLabel" type="Label" parent="." groups=["GameOverPieces"]]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "A Cheesy Delight!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueyAnswer" parent="." groups=["GamePieces"] instance=ExtResource("4_vifcx")]
visible = false
position = Vector2(616, 576)

[node name="RestartButton" parent="." groups=["GameOverPieces"] instance=ExtResource("5_xfil1")]
visible = false
offset_left = 128.0
offset_top = 448.0
offset_right = 528.0
offset_bottom = 548.0
text = "Play Again"

[node name="MainMenuButton" parent="." groups=["GameOverPieces"] instance=ExtResource("5_xfil1")]
visible = false
offset_left = 624.0
offset_top = 448.0
offset_right = 1024.0
offset_bottom = 548.0
text = "Main Menu"

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -32.5
offset_right = 20.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 256
text = "3"
horizontal_alignment = 1

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PauseScreen" parent="." instance=ExtResource("6_flgk0")]
visible = false

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ciybh")

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vifcx")

[node name="NewHighScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_huoen")

[connection signal="game_ended" from="." to="." method="_on_game_ended"]
[connection signal="game_ended" from="." to="HUD" method="_on_game_ended"]
[connection signal="game_started" from="." to="." method="_on_game_started"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="board_equation_selected" from="EquationBoard" to="." method="_on_board_equation_selected"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="paused" from="PauseScreen" to="." method="_on_pause_screen_paused"]
[connection signal="unpaused" from="PauseScreen" to="." method="_on_pause_screen_unpaused"]
